--- a/package.json
+++ b/package.json
@@ -58,5 +58,22 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 8.1.2.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mrjabar/jeli-MEAN.git"
+  },
+  "keywords": [
+    "Jeli",
+    "MEAN",
+    "Stack"
+  ],
+  "author": "Ade Jabar",
+  "license": "UNLICENSED",
+  "bugs": {
+    "url": "https://github.com/mrjabar/jeli-MEAN/issues"
+  },
+  "homepage": "https://github.com/mrjabar/jeli-MEAN#readme"
 }
